# KinFu

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  footer.html
cl/: bilateral.cl  normal_map.cl  pose_estimation.cl  raycast.cl  tsdf.cl  vertex_map.cl
data/test/file_system_opencl_program_factory/: bilateral.cl
include/dynfu/: boost_compute_detail_type_name_trait.hpp  buffered_depth_device.hpp  camera.hpp  cpu_pipeline_value.hpp  depth_device.hpp  depth_device_decorator.hpp  file_system_depth_device.hpp  file_system_opencl_program_factory.hpp  filesystem.hpp  fps_depth_device.hpp  half.hpp  high_resolution_clock.hpp  kinect_fusion.hpp  kinect_fusion_eigen_pose_estimation_pipeline_block.hpp  kinect_fusion_opencl_frame_to_frame_surface_prediction_pipeline_block.hpp  kinect_fusion_opencl_measurement_pipeline_block.hpp  kinect_fusion_opencl_pose_estimation_pipeline_block.hpp  kinect_fusion_opencl_surface_prediction_pipeline_block.hpp  kinect_fusion_opencl_update_reconstruction_pipeline_block.hpp  libigl.hpp  measurement_pipeline_block.hpp  mock_depth_device.hpp  msrc_file_system_depth_device.hpp  opencl_buffer_pipeline_value.hpp  opencl_build_error.hpp  opencl_depth_device.hpp  opencl_pipeline_value.hpp  opencl_program_factory.hpp  opencl_vector_pipeline_value.hpp  opencv_depth_device.hpp  optional.hpp  path.hpp  pipeline_value.hpp  pixel.hpp  pose_estimation_pipeline_block.hpp  scope.hpp  surface_prediction_pipeline_block.hpp  timer.hpp  update_reconstruction_pipeline_block.hpp
include/kinfu/: boost_compute_detail_type_name_trait.hpp  buffered_depth_device.hpp  camera.hpp  cpu_pipeline_value.hpp  depth_device.hpp  depth_device_decorator.hpp  file_system_depth_device.hpp  file_system_opencl_program_factory.hpp  filesystem.hpp  fps_depth_device.hpp  half.hpp  high_resolution_clock.hpp  kinect_fusion.hpp  kinect_fusion_eigen_pose_estimation_pipeline_block.hpp  kinect_fusion_opencl_frame_to_frame_surface_prediction_pipeline_block.hpp  kinect_fusion_opencl_measurement_pipeline_block.hpp  kinect_fusion_opencl_pose_estimation_pipeline_block.hpp  kinect_fusion_opencl_surface_prediction_pipeline_block.hpp  kinect_fusion_opencl_update_reconstruction_pipeline_block.hpp  libigl.hpp  measurement_pipeline_block.hpp  mock_depth_device.hpp  msrc_file_system_depth_device.hpp  opencl_build_error.hpp  opencl_depth_device.hpp  opencl_pipeline_value.hpp  opencl_program_factory.hpp  opencl_vector_pipeline_value.hpp  opencv_depth_device.hpp  optional.hpp  path.hpp  pipeline_value.hpp  pixel.hpp  pose_estimation_pipeline_block.hpp  scope.hpp  surface_prediction_pipeline_block.hpp  timer.hpp  update_reconstruction_pipeline_block.hpp
include/seng499/: cpu_pipeline_value.hpp  depth_device.hpp  depth_device_decorator.hpp  file_system_depth_device.hpp  file_system_opencl_program_factory.hpp  fps_depth_device.hpp  gpu_depth_device.hpp  kinect_fusion.hpp  measurement_pipeline_block.hpp  mock_depth_device.hpp  msrc_file_system_depth_device.hpp  opencl_depth_device.hpp  opencl_pipeline_value.hpp  opencl_program_factory.hpp  opencl_vector_pipeline_value.hpp  optional.hpp  path.hpp  pipeline_value.hpp  pose_estimation_pipeline_block.hpp  surface_prediction_pipeline_block.hpp  update_reconstruction_pipeline_block.hpp
proto/math/: VertexNormalMaps.m
src/: buffered_depth_device.cpp  camera.cpp  depth_device.cpp  depth_device_decorator.cpp  file_system_depth_device.cpp  file_system_opencl_program_factory.cpp  fps_depth_device.cpp  gpu_depth_device.cpp  high_resolution_clock.cpp  kinect_fusion.cpp  kinect_fusion_eigen_pose_estimation_pipeline_block.cpp  kinect_fusion_opencl_frame_to_frame_surface_prediction_pipeline_block.cpp  kinect_fusion_opencl_measurement_pipeline_block.cpp  kinect_fusion_opencl_pose_estimation_pipeline_block.cpp  kinect_fusion_opencl_surface_prediction_pipeline_block.cpp  kinect_fusion_opencl_update_reconstruction_pipeline_block.cpp  libigl.cpp  main.cpp  measurement_pipeline_block.cpp  mock_depth_device.cpp  msrc_file_system_depth_device.cpp  opencl_build_error.cpp  opencl_depth_device.cpp  opencl_program_factory.cpp  opencv_depth_device.cpp  path.cpp  pose_estimation_pipeline_block.cpp  surface_prediction_pipeline_block.cpp  tsdf_viewer.cpp  update_reconstruction_pipeline_block.cpp  whereami.c  whereami.cpp
src/test/: camera.cpp  cpu_pipeline_value.cpp  file_system_depth_device.cpp  file_system_opencl_program_factory.cpp  fps_depth_device.cpp  gpu_depth_device.cpp  kinect_fusion.cpp  kinect_fusion_eigen_pose_estimation_pipeline_block.cpp  kinect_fusion_opencl_frame_to_frame_surface_prediction_pipeline_block.cpp  kinect_fusion_opencl_measurement_pipeline_block.cpp  kinect_fusion_opencl_pose_estimation_pipeline_block.cpp  kinect_fusion_opencl_surface_prediction_pipeline_block.cpp  kinect_fusion_opencl_update_reconstruction_pipeline_block.cpp  msrc_file_system_depth_device.cpp  opencl_buffer_pipeline_value.cpp  opencl_build_error.cpp  opencl_depth_device.cpp  opencl_pipeline_value.cpp  opencl_vector_pipeline_value.cpp  opencv_depth_device.cpp
